--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
             <a href="#">
             <img src="Images/logo-tim-berners-britanica.webp" alt="logo de britanica" class="logo"></a>
             <ul class="buttons_nav">
-             <li><a href="#"><i class="fa-solid fa-bars" style="color: #ffffff;" aria-hidden="true" ></i>Browse</a></li>
-             <li><a href="#"><i class="fa-solid fa-magnifying-glass" style="color: #ffffff;" aria-hidden="true"></i>Search</a></li>
+             <li><a href="#"><i class="fa-solid fa-bars" style="color: #ffffff;" aria-hidden="true" class="burguer" ></i></a></li>
+             <li> <a href="#">Browse</a></li>
+             <li><a href="#"><i class="fa-solid fa-magnifying-glass" style="color: #ffffff;" aria-hidden="true" class="search"></i></a></li>
+             <li>Search</li>
              <li><a href="#">Dictionary</a></li>
              <li><a href="#">Quizzes</a></li> 
              <li><a href="#">Money</a></li> 
             </ul>
             <ul class="buttons_nav_droite">
                 <li><button class="button_sub" type="button">Subscribe</button></li>
-                <li><a href="#"></a>Login <i class="fa-solid fa-angle-down" style="color: #ffffff;" aria-hidden="true"></i> </li>
+                <li><a href="#"></a>Login <i class="fa-solid fa-angle-down" style="color: #ffffff;" aria-hidden="true" class="login"></i> </li>
             </ul>
         </nav>
     </header>
